<resources>
    <string name="app_name">MusicaEmPE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Início</string>
    <string name="title_events">Eventos</string>
    <string name="title_artists">Artistas</string>
    <string name="title_favorite">Favorito</string>
    <string name="title_explore">Explorar</string>

    <string name="title_menu_config">Configurações do Perfil</string>
    <string name="title_menu_logout">Sair</string>

    <string name="title_action_add_event">Adicionar Evento</string>
    <string name="title_action_search">Pesquisar</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="signup_name">Digite o nome do(a) artista/grupo/pessoa</string>
    <string name="signup_username">Digite o nome de login</string>
    <string name="signup_email">Digite seu email</string>
    <string name="signup_password">Digite sua senha</string>

    <string name="login_username">Usuário</string>
    <string name="login_password">Senha</string>

    <string name="checkArtista">Escolha Tipo de Usuário(a)/Artista/Produtor(a):</string>

    <string name="no_login">Não tem conta? Clique aqui para cadastrar.</string>
    <string name="no_signup">Já tem conta? Clique aqui.</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_config_user">ConfigUserActivity</string>
    <string name="title_activity_config_event">ConfigEventActivity</string>
    <string name="title_activity_profile_artist">ProfileArtistActivity</string>
    <string name="title_activity_profile_event">ProfileEventActivity</string>

    <string name="error_signup_weak_password">Digite uma senha com mais de 6 caracteres.</string>
    <string name="error_signup_invalid_email">Digite um email válido.</string>
    <string name="error_signup_user_collision">Usuário existente, digite um novo nome de usuário.</string>
    
    <string name="error_login_invalid_user">Digite um email válido</string>
    <string name="error_login_invalid_credetials">Email e senha não correspondem</string>
    
    <string name="hint_search">Pesquisar</string>
</resources>
