<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_recent_actors"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_my_location"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_action_calendar_month"
        android:title="@string/title_events" />
</menu>