<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_login">

    <ScrollView android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo_pe"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical|center_horizontal"
        tools:context="com.parse.starter.activity.CadastroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/editLoginUsuarioId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LogoId"
        android:layout_marginTop="60dp"
        android:background="@drawable/fundo_caixa_texto"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/botaoLogarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLoginSenhaId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/fundo_botao"
        android:text="Logar"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/noSignupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botaoLogarId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/no_login"
        android:textColor="@color/background_material_light" />

    <TextView
        android:id="@+id/LogoId"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="Música PE"
        android:textColor="@color/background_floating_material_light"
        android:textSize="@dimen/tamanho_titulo"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/editLoginSenhaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editLoginUsuarioId"
        android:layout_marginTop="10dp"
        android:background="@drawable/fundo_caixa_texto"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />
    </RelativeLayout>

    </ScrollView>
</layout>
